# agenticlens

./: .gitignore  AgenticLens_Spec.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TokenLens_Spec.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  provider_support.md  recommendation_rule.md
.github/workflows/: ci.yml  docs.yml  release-pypi.yml  release-testpypi.yml
benchmarks/: compare_results.py
benchmarks/datasets/: orders.json  refund_policy_docs.json  support_cases.json
benchmarks/frameworks/autogen/: run_autogen.py  run_autogen_live.py
benchmarks/frameworks/crewai/: run_crewai.py  run_crewai_live.py
benchmarks/frameworks/langgraph/: run_langgraph.py  run_langgraph_live.py
benchmarks/frameworks/llamaindex/: run_llamaindex.py  run_llamaindex_live.py
benchmarks/frameworks/native_python/: run_native.py  run_native_live.py
benchmarks/frameworks/semantic_kernel/: run_semantic_kernel.py  run_semantic_kernel_live.py
benchmarks/reports/autogen/: live_travel_report.json  support_refund_report.json
benchmarks/reports/crewai/: live_travel_report.json  support_refund_report.json
benchmarks/reports/langgraph/: live_travel_report.json  support_refund_report.json
benchmarks/reports/llamaindex/: live_travel_report.json  support_refund_report.json
benchmarks/reports/native_python/: live_travel_report.json  support_refund_report.json
benchmarks/reports/semantic_kernel/: live_travel_report.json  support_refund_report.json
benchmarks/results/: benchmark_results.csv  benchmark_results.json  benchmark_step_breakdown.csv  benchmark_summary.md  live_travel_results.csv  live_travel_results.json  live_travel_summary.md
benchmarks/shared/: benchmark_runner.py  live_benchmark_runner.py  live_travel_tasks.py  metrics_collector.py  support_data.py  support_tasks.py
docs/: export-formats.md  index.md  langchain-integration.md  rag-chunk-utility.md  workflow-schema-spec.md
examples/: basic_usage.py  export_demo.py  live_multiagent_travel_briefing.py  multiagent_edge_cases_demo.py  multiagent_support_demo.py  multiagent_token_optimization_demo.py  rag_customer_support_demo.py  rag_scoring_demo.py  recommendations_demo.py  support_copilot.py
notebooks/: agenticlens_multiagent_demo_beginner.ipynb  agenticlens_workflow_demo_beginner.ipynb
src/agenticlens/: __init__.py
src/agenticlens/adapters/: __init__.py  langchain.py
src/agenticlens/analyzers/: __init__.py  base.py
src/agenticlens/cli/: main.py  render.py
src/agenticlens/config/: __init__.py  live_pricing.py  pricing.py  pricing.yaml  settings.py
src/agenticlens/exporters/: __init__.py  base.py  csv_exporter.py  jira_exporter.py  json_exporter.py  markdown_exporter.py
src/agenticlens/metrics/: __init__.py  calculator.py
src/agenticlens/models/: __init__.py  recommendation.py  step.py  workflow.py
src/agenticlens/profiler/: __init__.py  context.py  profile.py  step.py
src/agenticlens/providers/: __init__.py  anthropic.py  base.py  openai.py  registry.py
src/agenticlens/recommenders/: __init__.py  base.py  chaos_impact.py  duplicate_tool_calls.py  engine.py  excessive_chunks.py  handoff_bloat.py  long_history.py  model_swap.py  rag_chunk_utility.py  repeated_prompt.py  utils.py
src/tokenlens/: __init__.py
src/tokenlens/cli/: main.py
src/tokenlens/config/: settings.py
src/tokenlens/metrics/: __init__.py  calculator.py
src/tokenlens/models/: enums.py  metrics.py  step.py
src/tokenlens/profiler/: context.py  profile.py  step.py
src/tokenlens/providers/: anthropic.py  openai.py  registry.py
src/tokenlens/recommenders/: __init__.py  engine.py  excessive_chunks.py  repeated_prompt.py
tests/: conftest.py  test_adapters_langchain.py  test_chaos_impact.py  test_cli.py  test_exporters.py  test_live_pricing.py  test_model_swap.py  test_models.py  test_pricing.py  test_profiler.py  test_providers.py  test_recommender_rules.py  test_recommenders.py
