[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenticlens"
version = "0.1.2"
description = "Profile, analyze, and optimize token consumption in LLM-powered applications and agentic workflows."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "AgenticLens Contributors" }]
keywords = ["llm", "tokens", "profiling", "observability", "cost", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.0,<3",
  "typer>=0.12",
  "rich>=13.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
  "build>=1.2",
  "twine>=5.1",
]
docs = [
  "mkdocs-material>=9.5",
]

[project.scripts]
agenticlens = "agenticlens.cli.main:app"

[project.urls]
Homepage = "https://github.com/agenticlens/agenticlens"
Repository = "https://github.com/agenticlens/agenticlens"
Issues = "https://github.com/agenticlens/agenticlens/issues"
Changelog = "https://github.com/agenticlens/agenticlens/blob/main/CHANGELOG.md"
Documentation = "https://github.com/agenticlens/agenticlens#readme"
Security = "https://github.com/agenticlens/agenticlens/security/policy"

[tool.hatch.build.targets.wheel]
packages = ["src/agenticlens"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
# B008: Typer's idiomatic `= typer.Argument(...)` default pattern is a known,
# intentional false positive for this rule.
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["agenticlens"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["agenticlens"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --cov=agenticlens --cov-report=term-missing"

[tool.coverage.run]
source = ["src/agenticlens"]
